--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -82,17 +82,17 @@ $gutter:            20px;
   $name: nth($breakpoint, 1);
   $declaration: nth($breakpoint, 2);
   @media only screen and #{$declaration}{
+    @if $name == sd {
+      .col .col {
+        margin-bottom: $gutter;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
     @for $i from 1 through $grid-columns {
       .col--#{$name}-#{$i} {
         width: percentage($i/$grid-columns);
-        @if $name == sd {
-          .col {
-            margin-bottom: $gutter;
-            &:last-child {
-              margin-bottom: 0;
-            }
-          }
-        }
       }
       .col--#{$name}-offset-#{$i} {
         margin-left: percentage($i/$grid-columns);
