--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -110,6 +110,16 @@ $grid-columns:      12;
 }
 
 
+/*
+ * User styles
+ */
+ 
+.container{
+  max-width: $max-width;
+  margin: 0 auto;
+  padding: 0 $gutter;
+}
+
 
 /*
  * Utilities
