--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -53,9 +53,11 @@ $grid-columns:      12;
  */
 
 @mixin grid-loop($name){
-  @for $i from 1 through $grid-columns {
-    .col--#{$name}-#{$i} {
-      width: percentage($i/$grid-columns);
+  @for $i from 0 through $grid-columns {
+    @if $i != 0 {
+      .col--#{$name}-#{$i} {
+        width: percentage($i/$grid-columns);
+      }
     }
     .col--#{$name}-offset-#{$i} {
       margin-left: percentage($i/$grid-columns);
