--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -23,14 +23,15 @@ $grid-columns: 12 !default;
  * Breakpoints
  */
 
-$breakpoint-sd: 768px;
-$breakpoint-md: 992px;
-$breakpoint-ld: 1200px;
+$breakpoint-sm: 768px !default;
+$breakpoint-md: 992px !default;
+$breakpoint-lg: 1200px !default;
 
 $breakpoints: (
-  'ld' '(min-width:' + $breakpoint-ld + ')',
-  'md' '(min-width:' + $breakpoint-sd + ') and (max-width:' + ($breakpoint-md - 1) + ')',
-  'sd' '(max-width:' + ($breakpoint-sd - 1) + ')'
+  'lg' '(min-width: ' + $breakpoint-lg + ')',
+  'md' '(min-width: ' + $breakpoint-md + ') and (max-width: ' + ($breakpoint-lg - 1) + ')',
+  'sm' '(min-width: ' + $breakpoint-sm + ') and (max-width:'  + ($breakpoint-md - 1) + ')',
+  'xs' '(max-width: ' + ($breakpoint-sm - 1) + ')'
 ) !default;
 
 
