--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -77,12 +77,18 @@ $breakpoints: (
   }
 }
 
+.row--gutterless {
+  margin-left: 0;
+}
+
 .col {
   float: left;
   padding-left: $grid-gutter;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.row--gutterless .col {
+  padding-left: 0;
 }
 
 
