Split into files

--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -1,56 +1,9 @@
 /**
- * Space between columns
+ * Default variables and helper mixins
  */
 
-$grid-gutter: 20px !default;
-
-
-/**
- * Max width of container
- */
-
-$grid-max-width: 1200px + ($grid-gutter * 2) !default;
-
-
-/**
- * Number of total columns
- */
-
-$grid-columns: 12 !default;
-
-
-/**
- * Breakpoints
- */
-
-$breakpoint-sm: 768px !default;
-$breakpoint-md: 992px !default;
-$breakpoint-lg: 1200px !default;
-
-$breakpoints: (
-  'lg' '(min-width: ' + $breakpoint-lg + ')',
-  'md' '(min-width: ' + $breakpoint-md + ') and (max-width: ' + ($breakpoint-lg - 1) + ')',
-  'sm' '(min-width: ' + $breakpoint-sm + ') and (max-width:'  + ($breakpoint-md - 1) + ')',
-  'xs' '(max-width: ' + ($breakpoint-sm - 1) + ')'
-) !default;
-
-
-/**
- * Grid loop mixin
- */
-
-@mixin grid-loop($name){
-  @for $i from 0 through $grid-columns {
-    @if $i != 0 {
-      .col--#{$name}-#{$i} {
-        width: percentage($i/$grid-columns);
-      }
-    }
-    .col--#{$name}-offset-#{$i} {
-      margin-left: percentage($i/$grid-columns);
-    }
-  }
-}
+@import 'defaults';
+@import 'mixins';
 
 
 /**
@@ -58,27 +11,19 @@ $breakpoints: (
  */
 
 .container {
+  @include clearfix();
   max-width: $grid-max-width;
   margin: 0 auto;
   padding: 0 $grid-gutter;
 }
 
 .row {
+  @include clearfix();
   list-style: none;
   margin-left: -$grid-gutter;
-  &:before,
-  &:after {
-    content: '';
-    display: table;
-    line-height: 0;
+  &.row--gutterless {
+    margin-left: 0;
   }
-  &:after {
-    clear: both;
-  }
-}
-
-.row--gutterless {
-  margin-left: 0;
 }
 
 .col {
@@ -97,18 +42,10 @@ $breakpoints: (
  */
 
 @each $breakpoint in $breakpoints {
-
   $name: nth($breakpoint, 1);
   $declaration: nth($breakpoint, 2);
 
-  @if $name == ld {
+  @media only screen and #{$declaration} {
     @include grid-loop($name);
   }
-  
-  @else {
-    @media only screen and #{$declaration} {
-      @include grid-loop($name);
-    }
-  } 
-
 }
