--- a/_defaults.scss
+++ b/_defaults.scss
@@ -30,6 +30,6 @@ $breakpoint-lg: 1200px !default;
 $breakpoints: (
     'lg' '(min-width: ' + $breakpoint-lg + ')',
     'md' '(min-width: ' + $breakpoint-md + ') and (max-width: ' + ($breakpoint-lg - 1) + ')',
-    'sm' '(min-width: ' + $breakpoint-sm + ') and (max-width:'  + ($breakpoint-md - 1) + ')',
-    'xs' '(max-width: ' + ($breakpoint-sm - 1) + ')'
+    'sm' '(min-width: ' + ($breakpoint-sm + 1) + ') and (max-width:'  + ($breakpoint-md - 1) + ')',
+    'xs' '(max-width: ' + $breakpoint-sm + ')'
 ) !default;
