--- a/simple-grid.scss
+++ b/simple-grid.scss
@@ -2,8 +2,9 @@
  * Default variables and helper mixins
  */
 
-@import 'defaults';
-@import 'mixins';
+@import 
+    'defaults',
+    'mixins';
 
 
 /**
@@ -11,28 +12,28 @@
  */
 
 .container {
-  @include clearfix;
-  max-width: $grid-max-width;
-  margin: 0 auto;
-  padding: 0 $grid-gutter;
+    @include clearfix;
+    max-width: $grid-max-width;
+    margin: 0 auto;
+    padding: 0 $grid-gutter;
 }
 
 .row {
-  @include clearfix;
-  list-style: none;
-  margin-left: -$grid-gutter;
-  &.row--gutterless {
-    margin-left: 0;
-  }
+    @include clearfix;
+    list-style: none;
+    margin-left: -$grid-gutter;
+    &.row--gutterless {
+        margin-left: 0;
+    }
 }
 
 .col {
-  float: left;
-  padding-left: $grid-gutter;
-  box-sizing: border-box;
-  .row--gutterless & {
-    padding-left: 0;
-  }
+    float: left;
+    padding-left: $grid-gutter;
+    box-sizing: border-box;
+    .row--gutterless & {
+        padding-left: 0;
+    }
 }
 
 
@@ -42,10 +43,10 @@
  */
 
 @each $breakpoint in $breakpoints {
-  $name: nth($breakpoint, 1);
-  $declaration: nth($breakpoint, 2);
+    $name: nth($breakpoint, 1);
+    $declaration: nth($breakpoint, 2);
 
-  @media only screen and #{$declaration} {
-    @include grid-loop($name);
-  }
+    @media only screen and #{$declaration} {
+        @include grid-loop($name);
+    }
 }
