--- a/_defaults.scss
+++ b/_defaults.scss
@@ -23,13 +23,13 @@ $grid-columns: 12 !default;
  * Breakpoints
  */
 
-$breakpoint-sm: 767px !default;
-$breakpoint-md: 992px !default;
 $breakpoint-lg: 1200px !default;
+$breakpoint-md: 768px !default;
+$breakpoint-sm: 480px !default;
 
 $breakpoints: (
     'lg' '(min-width: ' + $breakpoint-lg + ')',
-    'md' '(min-width: ' + $breakpoint-md + ') and (max-width: ' + ($breakpoint-lg - 1) + ')',
-    'sm' '(min-width: ' + ($breakpoint-sm + 1) + ') and (max-width:'  + ($breakpoint-md - 1) + ')',
+    'md' '(min-width: ' + ($breakpoint-md) + ') and (max-width: ' + ($breakpoint-lg - 1) + ')',
+    'sm' '(max-width:'  + ($breakpoint-md - 1) + ')',
     'xs' '(max-width: ' + $breakpoint-sm + ')'
 ) !default;
