--- a/_mixins.scss
+++ b/_mixins.scss
@@ -9,6 +9,7 @@
                 width: percentage($i/$grid-columns);
                 .row--flex & {
                     flex: 0 0 percentage($i/$grid-columns);
+                    width: auto;
                 }
             }
         }
