--- a/_mixins.scss
+++ b/_mixins.scss
@@ -8,8 +8,10 @@
             .col--#{$name}-#{$i} {
                 width: percentage($i/$grid-columns);
                 .row--flex & {
-                    flex: 0 0 percentage($i/$grid-columns);
+                    flex: 1;
+                    max-width: percentage($i/$grid-columns);
                     width: auto;
+                    float: none;
                 }
             }
         }
