--- a/_defaults.scss
+++ b/_defaults.scss
@@ -23,9 +23,10 @@ $grid-columns: 12 !default;
  * Breakpoints
  */
 
-$breakpoint-lg: 1200px !default;
-$breakpoint-md: 768px !default;
-$breakpoint-sm: 480px !default;
+$breakpoint-lg: 1280px !default;
+$breakpoint-md: 1024px !default;
+$breakpoint-sm: 768px !default;
+$breakpoint-xs: 480px !default;
 
 $breakpoints: (
     'lg' '(min-width: ' + $breakpoint-lg + ')',
